--- a/css/screen.css
+++ b/css/screen.css
@@ -993,7 +993,7 @@ Copyright (c) 2005-2007 Stu Nicholls. All rights reserved. This stylesheet and t
 	padding: 0;
 	}
 .nav .select a	{
-	background: url(../images/shared/nav/pro_line_0.gif);
+	/*background: url(../images/shared/nav/pro_line_0.gif);*/
 	color: #fff;
 	display: block;
 	float: left;
@@ -1088,13 +1088,13 @@ Copyright (c) 2005-2007 Stu Nicholls. All rights reserved. This stylesheet and t
 	white-space: nowrap;
 	}
 .nav .current .sub li.sub_show a	{
-	background: url(../images/shared/nav/menus/back_1.gif);
+	/*background: url(../images/shared/nav/menus/back_1.gif);*/
 	color: #bb953a;
 	cursor: default;
 	}
 .nav .select :hover .sub li a:hover, 
 .nav .current .sub li a:hover	{
-	background: url(../images/shared/nav/menus/back_1.gif);
+	/*background: url(../images/shared/nav/menus/back_1.gif);*/
 	color: #bb953a;
 	visibility: visible;
 	}
