--- a/css/screen.css
+++ b/css/screen.css
@@ -714,6 +714,17 @@ a:hover.action-delete	{
 	padding: 6px 6px 0 6px;
 	width: 683px;
 	}
+.form-textarea-min	{
+	background: url(../images/forms/form_textarea_min.gif) no-repeat;
+	border: none;
+	color: #393939;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	height: 74px;
+	overflow: auto;
+	padding: 6px 6px 0 6px;
+	width: 194px;
+	}
 #id-form td	{
 	padding: 0 0 10px 0;
 	}
