--- a/css/screen.css
+++ b/css/screen.css
@@ -776,7 +776,15 @@ a:hover.action-delete	{
 	padding: 3px;
 	width: 200px;
 	}
-
+	
+.styledselect-biodata	{
+	border: 1px solid #acacac;
+	margin-right: 3px;
+	padding: 5px 4px 5px 4px;
+	width: 198px;
+	color:#333;
+	}
+	
 #step-holder {
 font-family: Tahoma;
 	height:39px;
